--- a/portraits.html
+++ b/portraits.html
@@ -120,20 +120,20 @@
 
         </div>
         <div class="row" id="lightgallery">
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po1.jpg" data-sub-html="Portraits">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po1.JPG" data-sub-html="Portraits">
             <a href="#"><img src="images/po1.JPG" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po2.jpg" data-sub-html="Portraits">
-            <a href="#"><img src="images/po2.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po2.JPG" data-sub-html="Portraits">
+            <a href="#"><img src="images/po2.JPG" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po3.jpg" data-sub-html="Portraits">
-            <a href="#"><img src="images/po3.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po3.JPG" data-sub-html="Portraits">
+            <a href="#"><img src="images/po3.JPG" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po4.jpg" data-sub-html="Portraits">
-            <a href="#"><img src="images/po4.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po4.JPG" data-sub-html="Portraits">
+            <a href="#"><img src="images/po4.JPG" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po5.jpg" data-sub-html="Portraits">
-            <a href="#"><img src="images/po5.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/po5.JPG" data-sub-html="Portraits">
+            <a href="#"><img src="images/po5.JPG" alt="IMage" class="img-fluid"></a>
           </div>
           
           
