--- a/graduation.html
+++ b/graduation.html
@@ -121,7 +121,7 @@
         </div>
         <div class="row" id="lightgallery">
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/g1.jpg" data-sub-html="Graduation">
-            <a href="#"><img src="images/g1.JPG" alt="IMage" class="img-fluid"></a>
+            <a href="#"><img src="images/g1.jpg" alt="IMage" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/g2.jpg" data-sub-html="Graduation">
             <a href="#"><img src="images/g2.jpg" alt="IMage" class="img-fluid"></a>
