--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <h2 class="mb-3">Portraits</h2>
               <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
-            <img src="images/po01.JPG" alt="Image" class="img-fluid">
+            <img src="images/po01.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
