--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h2 class="mb-3">Graduation</h2>
               <a href="graduation.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
-            <img src="images/g1.JPG" alt="Image" class="img-fluid">
+            <img src="images/g1.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-4">
